--- a/tests/xor.html
+++ b/tests/xor.html
@@ -1,4 +1,4 @@
-<script src="../out/build.js"></script>
+<script async src="../out/build.js"></script>
 <script>
 var XOR_DATA = [
     [[-1, -1], [-1]],
@@ -30,7 +30,7 @@ function XOR () {
     );
 }
 
-FANN.ready(function () {
+FANN_ready = function () {
     XOR();
-});
+};
 </script>
