--- a/tests/cascade.html
+++ b/tests/cascade.html
@@ -8,20 +8,18 @@ var XOR_DATA = [
 ];
 
 function XOR () {
-    NN = FANN.create(3, [2, 3, 1]);
-
-    NN.set_activation_steepness_hidden(1);
-    NN.set_activation_steepness_output(1);
-    NN.set_activation_function_hidden(FANN.SIGMOID_SYMMETRIC);
-    NN.set_activation_function_output(FANN.SIGMOID_SYMMETRIC);
-    NN.set_train_stop_function(FANN.STOPFUNC_BIT);
-    NN.set_bit_fail_limit(0.01);
-    NN.set_training_algorithm(FANN.TRAIN_RPROP);
-
+    NN = FANN.create(2, [2, 1]);
     data = FANN.createTraining(XOR_DATA);
-    NN.init_weights(data.pointer);
 
-    NN.train_on_data(data.pointer, 1000, 10, 0.01);
+    NN.set_training_algorithm(FANN.TRAIN_RPROP);
+    NN.set_activation_function_hidden(FANN.SIGMOID_SYMMETRIC);
+    NN.set_activation_function_output(FANN.LINEAR);
+    NN.set_train_error_function(FANN.ERRORFUNC_TANH);
+    NN.set_learning_rate(0.35);
+    
+    NN.set_train_stop_function(FANN.STOPFUNC_BIT);
+
+    NN.cascadetrain_on_data(data.pointer, 10, 1, 0.0);
 
     console.log(
         " -1 , -1 => " + NN.run([-1, -1]), '\n',
