* Include built file

--- a/tests/cascade.html
+++ b/tests/cascade.html
@@ -1,4 +1,4 @@
-<script async src="../out/build.js"></script>
+<script async src="../fannjs"></script>
 <script>
 var XOR_DATA = [
     [[-1, -1], [-1]],
