--- a/tests/xor.html
+++ b/tests/xor.html
@@ -1,4 +1,4 @@
-<script async src="../out/build.js"></script>
+<script async src="../fann.js"></script>
 <script>
 var XOR_DATA = [
     [[-1, -1], [-1]],
