--- a/tests/game.html
+++ b/tests/game.html
@@ -41,7 +41,7 @@ function createHunter () {
 		]];
 
 		var d = FANN.createTraining(train);
-		hunterNN.train_on_data(d, 50 * data.length, 0, 0.01);
+		hunterNN.train_on_data(d, 50, 0, 0.01);
 	
 		for (var h = 0; h < data.length; ++h) {
 			var hider = data[h].obj;
@@ -51,7 +51,7 @@ function createHunter () {
 			]];
 
 			var d2 = FANN.createTraining(train2);
-			hiderNN.train_on_data(d2, 50, 0, 0.01);
+			hiderNN.train_on_data(d2, 20, 0, 0.01);
 
 			for (var i = 0; i < hiders.length; ++i) {
 				if (hiders[i] == hider) {
