--- a/tests/game.html
+++ b/tests/game.html
@@ -189,4 +189,6 @@ function calculate (a, b, nn) {
 }
 
 </script>
+
+<p>The red blocks are trained to hunt the green blocks. The green blocks are trained to hide from the red blocks.</p>
 </body>
