* Link back to main page

--- a/tests/game.html
+++ b/tests/game.html
@@ -191,4 +191,5 @@ function calculate (a, b, nn) {
 </script>
 
 <p>The red blocks are trained to hunt the green blocks. The green blocks are trained to hide from the red blocks. Wait for the first collision to see them learn.</p>
+<p>Build with <a href="http://github.com/louisstow/FANN.js">FANN.js</a></p>
 </body>
