--- a/tests/cascade.html
+++ b/tests/cascade.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<title>Cascade XOR test</title>
-<style>
-ul { display: inline-block; width: 45% }
-</style>
+  <meta charset="utf-8" />
+  <title>Cascade XOR test</title>
+  <style>
+    ul { display: inline-block; width: 45% }
+  </style>
 </head>
 <body>
 <pre><ul id="elLog1"></ul><ul id="elLog2"></ul></pre>
@@ -41,21 +42,22 @@ function XOR () {
     log1(" 1 , -1 => " + NN.run([1, -1]) );
     log1(" 1 ,  1 => " + NN.run([1, 1])  );
     log1("Error: " + NN.get_MSE()        );
+    log1("Done.");
 }
 
-runAsyncChaining = function(fnList, context) {
-  if (!context) context = {};
+runAsyncChaining = function(fnList) {
   curFn = fnList.shift();
-  curFn.call(context, function done(){
-    if (fnList.length > 0) runAsyncChaining(fnList, context);
+  curFn(function done(err){
+    if (err) log2('<b>ERROR:</b> '+err);
+    else if (fnList.length > 0) runAsyncChaining(fnList);
+    else log2('Done.');
   });
 }
 
 log2('<b>XOR computed in a WebWorker.</b>');
-var $ // simplify context accessing.
+var $ = {} // context container.
 runAsyncChaining([
   function(d){
-    $ = this;
     try {
       createFANNWorker(function(err, FANN){ $.FANN = FANN; d() })
     } catch (err) {
@@ -63,17 +65,17 @@ runAsyncChaining([
       throw err;
     }
   },
-  function(d){ $.FANN.create([2, 1],           function(err, NN)  { $.NN = NN; d()     }) },
+  function(d){ $.FANN.create([2, 1],           function(err, NN)  { $.NN = NN; d(err)  }) },
   function(d){ $.FANN.createTraining(XOR_DATA, function(err, data){ $.data = data; d() }) },
-  function(d){ $.NN.set_training_algorithm(FANN.TRAIN_RPROP, d)                           },
-  function(d){ $.NN.set_activation_function_hidden(FANN.SIGMOID_SYMMETRIC, d)             },
-  function(d){ $.NN.set_activation_function_output(FANN.LINEAR, d)                        },
-  function(d){ $.NN.set_train_error_function(FANN.ERRORFUNC_TANH, d)                      },
+  function(d){ $.NN.set_training_algorithm($.FANN.TRAIN_RPROP, d)                         },
+  function(d){ $.NN.set_activation_function_hidden($.FANN.SIGMOID_SYMMETRIC, d)           },
+  function(d){ $.NN.set_activation_function_output($.FANN.LINEAR, d)                      },
+  function(d){ $.NN.set_train_error_function($.FANN.ERRORFUNC_TANH, d)                    },
   function(d){ $.NN.set_learning_rate(0.35, d)                                            },
-              
-  function(d){ $.NN.set_train_stop_function(FANN.STOPFUNC_BIT, d)                         },
 
-  function(d){ $.NN.cascadetrain_on_data(data.pointer, 10, 1, 0.0, d)                     },
+  function(d){ $.NN.set_train_stop_function($.FANN.STOPFUNC_BIT, d)                       },
+
+  function(d){ $.NN.cascadetrain_on_data($.data.pointer, 10, 1, 0.0, d)                   },
 
   function(d){ $.NN.run_list([ [-1,-1], [-1,1], [1,-1], [1,1], ],
     function(error, resp){
@@ -86,7 +88,7 @@ runAsyncChaining([
         d();
       });
     });
-  }
+  },
 ]);
 
 FANN_ready = function () {
